--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="score-container o">
                 <span id="o-score">0</span>
-                <div><span class="O">O</span> <span id="o-player-name">Computer</span></div>
+                <div><span class="O">O</span> <span id="o-player-name">Player 2</span></div>
             </div>
         </footer>
     </section>
